Update version handling to read from version file and set default version